--- a/beginning/CMakeLists.txt
+++ b/beginning/CMakeLists.txt
@@ -2,16 +2,24 @@ project(beginning)
 
 # 练习程序
 # 第1章练习
-add_executable(ex-1-01 exercises/ch01/ex01.cpp)
-add_executable(ex-1-02 exercises/ch01/ex02.cpp)
-add_executable(ex-1-03 exercises/ch01/ex03.cpp)
+add_executable(ex-01-01 exercises/ch01/ex01.cpp)
+add_executable(ex-01-02 exercises/ch01/ex02.cpp)
+add_executable(ex-01-03 exercises/ch01/ex03.cpp)
 
 # 第2章练习
-add_executable(ex-2-01 exercises/ch02/ex01.cpp)
-add_executable(ex-2-02 exercises/ch02/ex02.cpp)
-add_executable(ex-2-03 exercises/ch02/ex03.cpp)
-add_executable(ex-2-04 exercises/ch02/ex04.cpp)
-add_executable(ex-2-05 exercises/ch02/ex05.cpp)
-add_executable(ex-2-06 exercises/ch02/ex06.cpp)
-add_executable(ex-2-07 exercises/ch02/ex07.cpp)
-add_executable(ex-2-08 exercises/ch02/ex08.cpp)
+add_executable(ex-02-01 exercises/ch02/ex01.cpp)
+add_executable(ex-02-02 exercises/ch02/ex02.cpp)
+add_executable(ex-02-03 exercises/ch02/ex03.cpp)
+add_executable(ex-02-04 exercises/ch02/ex04.cpp)
+add_executable(ex-02-05 exercises/ch02/ex05.cpp)
+add_executable(ex-02-06 exercises/ch02/ex06.cpp)
+add_executable(ex-02-07 exercises/ch02/ex07.cpp)
+add_executable(ex-02-08 exercises/ch02/ex08.cpp)
+
+# 第3章练习
+add_executable(ex-03-01 exercises/ch03/ex01.cpp)
+add_executable(ex-03-02 exercises/ch03/ex02.cpp)
+add_executable(ex-03-03 exercises/ch03/ex03.cpp)
+add_executable(ex-03-04 exercises/ch03/ex04.cpp)
+add_executable(ex-03-05 exercises/ch03/ex05.cpp)
+add_executable(ex-03-06 exercises/ch03/ex06.cpp)
