阅读C++20入门实践第4章，并完成练习题

--- a/beginning/CMakeLists.txt
+++ b/beginning/CMakeLists.txt
@@ -23,3 +23,13 @@ add_executable(ex-03-03 exercises/ch03/ex03.cpp)
 add_executable(ex-03-04 exercises/ch03/ex04.cpp)
 add_executable(ex-03-05 exercises/ch03/ex05.cpp)
 add_executable(ex-03-06 exercises/ch03/ex06.cpp)
+
+# 第4章练习
+add_executable(ex-04-01 exercises/ch04/ex01.cpp)
+add_executable(ex-04-02 exercises/ch04/ex02.cpp)
+add_executable(ex-04-03 exercises/ch04/ex03.cpp)
+add_executable(ex-04-04 exercises/ch04/ex04.cpp)
+add_executable(ex-04-05 exercises/ch04/ex05.cpp)
+add_executable(ex-04-06 exercises/ch04/ex06.cpp)
+add_executable(ex-04-07 exercises/ch04/ex07.cpp)
+add_executable(ex-04-08 exercises/ch04/ex08.cpp)
